<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheels_driver</name>
  <version>0.0.0</version>
  <description>Package that is used to control the wheel movement of the car</description>
  <maintainer email="sam.vanderstraeten@pxl.be">Sam Vanderstraetem (PXL)</maintainer>
  <license>MIT</license>

  <build_depend>adafruit_drivers</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>adafruit_drivers</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
